--- a/app/src/main/res/layout/num_qaindao_sec.xml
+++ b/app/src/main/res/layout/num_qaindao_sec.xml
@@ -8,9 +8,31 @@
         android:layout_height="70dp">
         <include layout="@layout/title_second"/>
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_gravity="center"
+        android:layout_width="360dp"
+        android:layout_height="300dp">
+        <com.baidu.mapapi.map.MapView
+            android:id="@+id/bmapView3"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </com.baidu.mapapi.map.MapView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_gravity="center"
+        android:layout_width="360dp"
+        android:layout_height="wrap_content">
+        <TextView
+               android:id="@+id/positionText"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"/>
+        </LinearLayout>
     <LinearLayout
         android:layout_width="360dp"
-        android:layout_height="500dp"
+        android:layout_height="match_parent"
         android:layout_marginTop="36dp"
         android:layout_gravity="center"
         android:orientation="vertical">
