--- a/app/src/main/res/layout/qiandao_status.xml
+++ b/app/src/main/res/layout/qiandao_status.xml
@@ -14,15 +14,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <ListView
+
+
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/statusItem"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="7dp"
+            android:layout_marginRight="7dp"
+            android:scrollbars="none"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-        </ListView>
+            app:layout_constraintTop_toTopOf="parent" />
+
     </LinearLayout>
 
 </LinearLayout>
