--- a/app/src/main/res/layout/item_kaoqian.xml
+++ b/app/src/main/res/layout/item_kaoqian.xml
@@ -33,11 +33,18 @@
 
     <!--签到人数-->
     <LinearLayout
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView
-            android:paddingTop="20dp"
+            android:paddingTop="17dp"
+            android:id="@+id/qiandaoType"
+            android:layout_width = "match_parent"
+            android:layout_height = "wrap_content"
+            android:textColor="@android:color/secondary_text_light" />
+        <TextView
+            android:paddingStart="8dp"
+            android:paddingBottom="4dp"
             android:id="@+id/qiandaoNumber"
             android:layout_width = "match_parent"
             android:layout_height = "wrap_content"
