--- a/app/src/main/res/layout/photo.xml
+++ b/app/src/main/res/layout/photo.xml
@@ -25,24 +25,23 @@
         android:text="上传"/>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="图片路径："/>
-
-    <TextView
         android:id="@+id/TPath"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="图片Uri："/>
-
-    <TextView
         android:id="@+id/TUri"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+       />
+
+
+    <ProgressBar
+        android:id="@+id/prograss_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
 
     <ImageView
         android:layout_marginTop="20dp"
