--- a/app/src/main/res/layout/qiandao_status.xml
+++ b/app/src/main/res/layout/qiandao_status.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="dc.iface.teacher.QiandaoStatus"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,11 +14,20 @@
         <include layout="@layout/title_sec"/>
     </LinearLayout>
 
-    <LinearLayout
+
+    <dc.iface.TakePhotos.ImageTouchView
+        android:id="@+id/ser_res_pic"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:scaleType="matrix"
+        android:layout_gravity="center"
+        />
 
-
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshlayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/statusItem"
             android:layout_width="match_parent"
@@ -28,6 +40,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-    </LinearLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 
 </LinearLayout>
