--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -11,7 +11,15 @@
         <external-files-path name="paly" path="freeSoft"/>
         <!--external-cache-path  相当于 getExternalCacheDir（） -->
         <external-cache-path  name="lei" path="."/>
-
     </paths>
+    <paths xmlns:android="http://schemas.android.com/apk/res/android">
+        <external-path name="my_images" path="Android/data/dc.iface/files/Pictures" />
+    </paths>
+    <path>
+        <root-path name="root_path" path="."/>
+    </path>
+    <path>
+        <files-path name ="app" path ="Android/data/dc.iface/files/Pictures" />
+    </path>
 
 </resources>
