--- a/app/src/main/res/layout/forget_password.xml
+++ b/app/src/main/res/layout/forget_password.xml
@@ -59,14 +59,15 @@
                 android:layout_width="120dp"
                 android:layout_height="45dp"
                 android:gravity="right">
+
                 <Button
                     android:id="@+id/yanzhen"
                     android:layout_width="wrap_content"
-                    android:layout_height="45dp"
+                    android:layout_height="wrap_content"
                     android:textColor="@android:color/white"
                     android:background="@color/colorPrimaryDark"
                     android:text="验证码"
-                    android:textSize="26dp"/>
+                   />
             </LinearLayout>
 
 
