--- a/app/src/main/res/layout/item_status.xml
+++ b/app/src/main/res/layout/item_status.xml
@@ -1,44 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp"
-    android:orientation="horizontal">
+    android:layout_margin="10dp"
+    app:cardCornerRadius="10dp">
+
 
     <LinearLayout
-        android:layout_width="270dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/jobNumber"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        >
+
+        <LinearLayout
+            android:layout_width="270dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/jobNumber"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="8dp"
+                android:paddingStart="8dp"
+                android:paddingBottom="4dp"
+                android:textColor="@color/colorPrimary"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="8dp"
+                android:paddingBottom="4dp"
+                android:textColor="@android:color/secondary_text_light" /><!--style="@style/TextAppearance.AppCompat.AppCompat.Subhead"-->
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="8dp"
-            android:paddingStart="8dp"
-            android:paddingBottom="4dp"
-            android:textColor="@color/colorPrimary"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingStart="8dp"
-            android:paddingBottom="4dp"
-            android:textColor="@android:color/secondary_text_light" /><!--style="@style/TextAppearance.AppCompat.AppCompat.Subhead"-->
+            android:orientation="vertical">
+            <TextView
+                android:paddingTop="20dp"
+                android:id="@+id/status"
+                android:layout_width = "match_parent"
+                android:layout_height = "wrap_content"
+                android:textColor="@android:color/secondary_text_light" />
+        </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:paddingTop="20dp"
-            android:id="@+id/status"
-            android:layout_width = "match_parent"
-            android:layout_height = "wrap_content"
-            android:textColor="@android:color/secondary_text_light" />
-    </LinearLayout>
-</LinearLayout>
+</androidx.cardview.widget.CardView>
