--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -28,147 +28,165 @@
     </RelativeLayout>
 
     <!-- 输入工号-->
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginStart="48dp"
-        android:layout_marginEnd="48dp">
+        android:layout_marginEnd="48dp"
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:src="@drawable/ic_person_outline_black_24dp"
-            android:layout_marginBottom="6dp"
+            android:layout_margin="6dp"
             android:layout_alignParentBottom="true"/>
 
-        <EditText
-            android:id="@+id/EditText_JobNumber"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/text_input_layout_user5"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="center"
-            android:layout_marginStart="60dp"
-            android:layout_marginEnd="48dp"
-            android:layout_marginBottom="6dp"
-            android:hint="工号/学号"
-            android:inputType="text"
-            android:maxLines="1"
-            android:textColor="#000000"
-            android:textColorHint="#AAAAAA"
-            />
-    </RelativeLayout>
+            android:layout_height="wrap_content"
+            app:counterOverflowTextAppearance="@style/Platform.MaterialComponents.Light"
+            android:scrollbarAlwaysDrawHorizontalTrack="true"
+            app:counterEnabled="true"
+            app:counterMaxLength="15"
+            app:hintAnimationEnabled="true"
+            app:hintEnabled="true"
+            >
+
+            <EditText
+                android:id="@+id/EditText_JobNumber"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:hint="工号/学号"
+                android:inputType="text"
+                android:maxLines="1"
+                android:textColor="#000000"
+                android:textColorHint="#AAAAAA"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
 
     <!-- 输入密码-->
-    <RelativeLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginEnd="48dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:src="@drawable/ic_lock_outline_black_24dp"
+            android:layout_margin="6dp"
+            android:layout_alignParentBottom="true"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/text_input_layout_user3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:counterOverflowTextAppearance="@style/Platform.MaterialComponents.Light"
+            android:scrollbarAlwaysDrawHorizontalTrack="true"
+            app:counterEnabled="true"
+            app:counterMaxLength="15"
+            app:hintAnimationEnabled="true"
+            app:hintEnabled="true"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="#000000"
+            app:passwordToggleDrawable="@drawable/ic_visibility_black_24dp"
+            >
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/EditText_Password"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:hint="密码"
+                android:maxLines="1"
+                android:textColor="#000000"
+                android:textColorHint="#AAAAAA"
+                android:inputType="textPassword"
+                android:singleLine="true"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
+
+
+
+
+    <!-- 记住密码-->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:layout_marginStart="48dp"
         android:layout_marginEnd="48dp">
 
-        <ImageView
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:src="@drawable/ic_lock_outline_black_24dp"
-            android:layout_marginBottom="6dp"
-            android:layout_alignParentBottom="true"/>
-
-        <EditText
-            android:id="@+id/EditText_Password"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="center"
-            android:layout_marginStart="60dp"
-            android:layout_marginEnd="48dp"
-            android:layout_marginBottom="6dp"
-            android:hint="密码"
-            android:inputType="textPassword"
-            android:maxLines="1"
-            android:textColor="#000000"
-            android:textColorHint="#AAAAAA" />
-
-        <ImageView
-            android:id="@+id/ImageView_pwd_switch"
-            android:layout_width="48dp"
-            android:layout_height="30dp"
-            android:src="@drawable/ic_visibility_black_24dp"
-            android:layout_marginBottom="20dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            />
-
-    </RelativeLayout>
-
-
-    <!-- 记住密码-->
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="16dp">
-
         <CheckBox
             android:id="@+id/CheckBox_remember_pwd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="270dp"
+
+            android:layout_marginLeft="6dp"
             android:layout_marginBottom="4dp"
             android:text="记住密码"
             android:textColor="#F44E4E"
+
             />
 
-    </RelativeLayout>
+    </LinearLayout>
 
      <!-- 登陆按钮Longin-->
-    <RelativeLayout
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginEnd="48dp">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
+            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
             android:id="@+id/denglu"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:text="登  录"
-            android:textColor="@android:color/white"
             android:background="@color/colorPrimary"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="52dp"
-            android:layout_marginRight="48dp"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:layout_marginLeft="5dp"
+            android:layout_gravity="center"
             />
-
-
-    </RelativeLayout>
+    </LinearLayout>
 
     <!-- 忘记密码和注册-->
     <RelativeLayout
-        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginEnd="48dp"
         android:layout_alignParentStart="true">
 
         <TextView
             android:id="@+id/TextView_forget_pwd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="63dp"
-            android:layout_marginTop="0dp"
+            android:layout_margin="5dp"
             android:text="忘记密码"
             android:textColor="#F44E4E"
-            android:textSize="15dp" />
+            android:textSize="18dp" />
 
         <TextView
             android:id="@+id/text_sign_up"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="60dp"
+            android:layout_margin="5dp"
+
             android:text="注册账号"
             android:textColor="#F44E4E"
-            android:textSize="15dp"
+            android:textSize="18dp"
             android:layout_alignBaseline="@+id/TextView_forget_pwd"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
