--- a/app/src/main/res/layout/main_fragment_class.xml
+++ b/app/src/main/res/layout/main_fragment_class.xml
@@ -8,13 +8,11 @@
     tools:context=".teacher.MainActivity">
 
 
-
-
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshlayout3"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/course_list"
             android:layout_width="match_parent"
@@ -25,7 +23,9 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+
+            />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
